fix label vertical alignment issue add → after labels

--- a/app/assets/stylesheets/dialects.scss
+++ b/app/assets/stylesheets/dialects.scss
@@ -1,3 +1,5 @@
-.idiom-editor-td {
-  white-space: nowrap;
+.idioms-list label::after {
+  content: '→';
+  margin-right: 0.8em;
+  margin-left: 0.8em;
 }
